<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.tldn1.travellers.fragments.SecondFragment">
    <TextView
        android:textColor="@color/colorText"
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/guide_information"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />
    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/box_background_shape"
        android:orientation="vertical">

        <Button
            android:textColor="@color/colorText"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_state"
            android:id="@+id/btnGender"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="getGender"
            android:text="@string/gender"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:textColor="@color/colorText"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_state"
            android:id="@+id/btnAge"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="getAge"
            android:text="@string/age"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:textColor="@color/colorText"
            android:background="@drawable/button_state"
            android:id="@+id/btnLanguage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="getLanguage"
            android:text="@string/language"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>
