<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.tldn1.travellers.fragments.ThirdFragment">

    <TextView
        android:textColor="@color/colorText"
        android:id="@+id/a"
        android:textSize="20sp"
        android:text="@string/name_of_your_guide_is"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/guideName"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:layout_toEndOf="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/colorText"
        android:layout_below="@+id/a"
        android:id="@+id/b"
        android:textSize="20sp"
        android:text="@string/guide_will_wait_on_station"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/colorText"
        android:layout_below="@+id/b"
        android:id="@+id/arrivalDateTime"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/colorText"
        android:layout_marginStart="10dp"
        android:id="@+id/c"
        android:textSize="20sp"
        android:text="@string/price_is"
        android:layout_below="@+id/arrivalDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/colorText"
        android:layout_alignBaseline="@+id/c"
        android:id="@+id/guidePrice"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/guides_image"
        android:id="@+id/slika"
        android:layout_below="@+id/c"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_below="@+id/slika"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/guideImageView" />
</RelativeLayout>
