<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.tldn1.travellers.activitys.MainActivity">

    <Button
        android:textColor="@color/colorText"
        android:background="@drawable/button_home_state"
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif-condensed"
        android:onClick="Next"
        android:text="@string/next"
        android:textSize="20sp" />

    <Button
        android:textColor="@color/colorText"
        android:background="@drawable/button_home_state"
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif-condensed"
        android:onClick="NextTwo"
        android:text="@string/next"
        android:textSize="20sp"
        android:visibility="invisible" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button2" />

    <Button
        android:textColor="@color/colorText"
        android:background="@drawable/button_home_state"
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif-condensed"
        android:onClick="Previous"
        android:text="@string/previous"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:textColor="@color/colorText"
        android:background="@drawable/button_home_state"
        android:id="@+id/button5"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif-condensed"
        android:onClick="Finish"
        android:text="@string/finish"
        android:textSize="20sp"
        android:visibility="invisible" />
</RelativeLayout>
